# browser-sdk

./: .CHANGELOG.md.swp  .codecov.yml  .env.example  .eslintignore  .eslintrc.js  .gitignore  .gitlab-ci.yml  .gitmodules  .prettierignore  .prettierrc.yml  .wokeignore  .worktreeinclude  .yarnrc.yml  AGENTS.md  APPROACH.md  BROWSER_SUPPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.android  ESBUILD-NOTES.md  EXPOSURE_TRACK_TYPE_CHANGES.md  FORK_README.md  Gemfile  LEGAL  LICENSE  LICENSE-3rdparty.csv  NOTICE  PLAN.md  README.md  RELEASE_NOTES_DRAFT.md  _config_docs.yml  build-env.js  ci-browserstack.sh  ci-cbt.sh  datadog-ci.synthetics.json  demo.ts  deploy.sh  doc.md  (+39 more)
.claude/: settings.json
.cr-agent/: config.yaml  prompt.md  run.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  codeql-config.yml  dependabot.yml
.gitlab/: deploy-auto.yml  deploy-manual.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.plans/: 2026-03-06-rum-vue-design.md  2026-03-06-rum-vue.md
benchmark/: configuration.ts  createBenchmarkTest.ts  environment.ts  helpers.ts  playwright.config.ts  profiling.type.ts  tsconfig.json
developer-extension/: README.md  build.mjs  manifest-dev.json  manifest.json  package.json  tsconfig.json  tsconfig.webpack.json  webpack.config.js  webpack.config.mts  (+2 more)
rc-bundle-lambda/: .gitignore  Cargo.toml  README.md
rc-bundle-lambda/src/: bundle.rs  cache_cell.rs  main.rs  remote_config.rs  sdk_codebase.rs
rc-bundle-lambda/src/bundle/: build.rs  mod.rs  service.rs
rc-bundle-lambda/tests/: integration.rs
(+2270 files in other folders)
