[package]
name = "rc-bundle-lambda"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
arcstr = "1"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
flate2 = "1"
indexmap = "2"
lambda_http = "1"
relative-path = "2"
reqwest = { version = "0.13", features = ["json"] }
rustc-hash = "2"
serde_json = "1"
rolldown = { git = "https://github.com/rolldown/rolldown", tag = "v1.0.0-rc.9" }
tar = "0.4"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1.3"

[dev-dependencies]
reqwest = { version = "0.13", features = ["blocking", "json"] }
